# cmcc-cloud-alive

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  子账号登录说明.txt
cmcc_cloud_alive/: __init__.py  __main__.py  account_keepalive.py  auth.py  auth_taxonomy.py  cag_boot.py  cag_keepalive.py  cloud.py  core.py  desktop_keepalive.py  device_info.py  kpi_hooks.py  logout.py  main.py  mqtt_keepalive.py  point.py  power_monitor.py  probe.py  product_pin.py  product_router.py  protocol_runner.py  rap_zime.py  scg_route.py  spice_protocol.py  strategy.py  token.py  trace_timeline.py  verified_run.py  workflow.py  zime_native_bridge.py  zime_probe.py  zte_cag.py  zte_cag_mux.py  zte_cag_proxy.py  zte_connect_params.py  zte_raw_spice.py  zte_route.py  zte_security.py
cmcc_cloud_alive/webui/: __init__.py  app.py  orchestrator.py
cmcc_cloud_alive/webui/static/: app.css  app.js  index.html
docker/: Dockerfile  __init__.py  docker-compose.yml  entrypoint.sh  webui_placeholder.py
docs/: delivery-handoff.md
lib/protocol/: cag-handshake-plan.js
longtest_logs/: status_40min_20260706_145523.jsonl
scripts/: build-zime-probe.sh  extract-cag-handshake.js  power-monitor.sh  run-zime-probe.sh  verified-run.sh
tests/: protocol-codec.test.js  test_heartbeat_inject.py  test_zte_cag.py
