[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcc-cloud-alive"
version = "0.1.0"
description = "移动云电脑中文保活向导"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["cryptography>=3.4"]

[project.optional-dependencies]
web = ["starlette>=0.27", "uvicorn>=0.23"]

[project.scripts]
cmcc-cloud-alive = "cmcc_cloud_alive.main:main"
cmcc-cloud-webui = "cmcc_cloud_alive.webui.app:main"

[tool.setuptools.packages.find]
include = ["cmcc_cloud_alive*"]

[tool.setuptools.package-data]
cmcc_cloud_alive = ["webui/static/*"]
